--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,13 @@ jobs:
         with:
           go-version: '1.24.1'
 
+      - name: Install Go Packages
+        run: go mod tidy
+        working-directory: ./fastzip4jlib
+
       - name: Build Go Lib
-        run: ./fastzip4jlib/build.sh
+        run: ./build.sh
+        working-directory: ./fastzip4jlib
 
       - name: Setup JDK
         uses: actions/setup-java@v3
@@ -29,6 +34,7 @@ jobs:
 
       - name: Setup Maven
         run: sudo apt-get install -y maven
+        working-directory: ./fastzip4j
 
       - name: Build artifact
         run: mvn clean install
