--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build Go Library
 
 on:
   push:
+    tags:
+      - '*'
     branches:
       - main
   pull_request:
@@ -37,12 +39,18 @@ jobs:
         run: sudo apt-get install -y maven
         working-directory: ./fastzip4j
 
+      - name: Extract Version from Tag
+        id: extract_version
+        if: startsWith(github.ref, 'refs/tags/') # Only run this step for tags
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       - name: Build artifact
-        run: mvn clean install
+        run: mvn clean install -Dproject.version=${{ env.VERSION || 'SNAPSHOT' }}
         working-directory: ./fastzip4j
       
       - name: Deploy
-        run: mvn deploy
+        if: startsWith(github.ref, 'refs/tags/') # Only deploy on tag creation
+        run: mvn deploy -Dproject.version=${{ env.VERSION }}
         working-directory: ./fastzip4j
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
