Refactor/refactor api and update cicd (#2)
* fix pipelines + update docs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,71 @@
-name: Publish package to the Maven Central Repository and GitHub Packages
+name: Build and Deploy
+
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+      - '*'
+
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Java for publishing to Maven Central Repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.1'
+
+      - name: Install Go Packages
+        run: go mod tidy
+        working-directory: ./fastzip4jlib
+
+      - name: Build Go Lib
+        run: ./build.sh
+        working-directory: ./fastzip4jlib
+
+      - name: Setup JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
           distribution: 'temurin'
-          server-id: central
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-      - name: Publish to the Maven Central Repository
-        run: mvn --batch-mode deploy
-        env:
-          MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_REPO_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_REPO_PASSWORD }}
-      - name: Set up Java for publishing to GitHub Packages
-        uses: actions/setup-java@v4
-        with:
           java-version: '21'
-          distribution: 'temurin'
-      - name: Publish to GitHub Packages
-        run: mvn --batch-mode deploy
+
+      - name: Setup Maven
+        run: sudo apt-get install -y maven
+
+      - name: Extract Version from Tag
+        id: extract_version
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/}
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          echo "Extracted version: ${VERSION}"
+
+      - name: Configure Maven for GitHub Packages
+        run: |
+          mkdir -p ~/.m2
+          cat > ~/.m2/settings.xml << EOF
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+                              https://maven.apache.org/xsd/settings-1.0.0.xsd">
+            <servers>
+              <server>
+                <id>github</id>
+                <username>\${env.GITHUB_ACTOR}</username>
+                <password>\${env.GITHUB_TOKEN}</password>
+              </server>
+            </servers>
+          </settings>
+          EOF
+
+      - name: Build artifact
+        run: mvn clean install -Dproject.version=${{ env.VERSION }} -Dgpg.skip=true
+        working-directory: ./fastzip4j
+      
+      - name: Deploy to GitHub Packages
+        run: mvn deploy -Dproject.version=${{ env.VERSION }}
+        working-directory: ./fastzip4j
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
