--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,6 @@ name: Build
 
 on:
   push:
-    tags:
-      - '*'
     branches:
       - main
   pull_request:
@@ -39,18 +37,6 @@ jobs:
         run: sudo apt-get install -y maven
         working-directory: ./fastzip4j
 
-      - name: Extract Version from Tag
-        id: extract_version
-        if: startsWith(github.ref, 'refs/tags/') # Only run this step for tags
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-
       - name: Build artifact
-        run: mvn clean install -Dproject.version=${{ env.VERSION || 'SNAPSHOT' }}
+        run: mvn clean install -Dgpg.skip=true
         working-directory: ./fastzip4j
-      
-      - name: Deploy
-        if: startsWith(github.ref, 'refs/tags/') # Only deploy on tag creation
-        run: mvn deploy -Dproject.version=${{ env.VERSION }}
-        working-directory: ./fastzip4j
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
