--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Git Repository
+name: Deploy to GitHub Packages
 
 on:
   push:
@@ -31,6 +31,11 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: ${{ secrets.GPG_PASSPHRASE }}
 
       - name: Setup Maven
         run: sudo apt-get install -y maven
@@ -56,6 +61,11 @@ jobs:
                 <username>\${env.GITHUB_ACTOR}</username>
                 <password>\${env.GITHUB_TOKEN}</password>
               </server>
+              <server>
+                <id>ossrh</id>
+                <username>\${env.MAVEN_USERNAME}</username>
+                <password>\${env.MAVEN_PASSWORD}</password>
+              </server>
             </servers>
           </settings>
           EOF
@@ -63,6 +73,14 @@ jobs:
       - name: Build artifact
         run: mvn clean install -Dproject.version=${{ env.VERSION }} -Dgpg.skip=true
         working-directory: ./fastzip4j
+
+      - name: Publish to Maven Central
+        run: mvn --batch-mode deploy -Dproject.version=${{ env.VERSION }}
+        working-directory: ./fastzip4j
+        env:
+          MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_REPO_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_REPO_PASSWORD }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
       
       - name: Deploy to GitHub Packages
         run: mvn deploy -Dproject.version=${{ env.VERSION }} -Dgpg.skip=true
