--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,14 +74,14 @@ jobs:
         run: mvn clean install -Dproject.version=${{ env.VERSION }} -Dgpg.skip=true
         working-directory: ./fastzip4j
 
-      - name: Publish to Maven Central
+      - name: Publish to Apache Maven Central
         run: mvn --batch-mode deploy -Dproject.version=${{ env.VERSION }}
-        working-directory: ./fastzip4j
         env:
           MAVEN_USERNAME: ${{ secrets.MAVEN_CENTRAL_REPO_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MAVEN_CENTRAL_REPO_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-      
+          GPG_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+
       - name: Deploy to GitHub Packages
         run: mvn deploy -Dproject.version=${{ env.VERSION }} -Dgpg.skip=true
         working-directory: ./fastzip4j
