cicd: fix pipeline

--- a/fastzip4j/pom.xml
+++ b/fastzip4j/pom.xml
@@ -108,7 +108,7 @@
                             <goal>sign</goal>
                         </goals>
                         <configuration>
-                            <signer>hn</signer>
+                            <signer>bc</signer>
                         </configuration>
                     </execution>
                 </executions>
