--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
                 <password>\${env.GITHUB_TOKEN}</password>
               </server>
               <server>
-                <id>ossrh</id>
+                <id>${server}</id>
                 <username>\${env.MAVEN_USERNAME}</username>
                 <password>\${env.MAVEN_PASSWORD}</password>
               </server>
