--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,23 @@ jobs:
         working-directory: ./fastzip4jlib
 
       - name: Build Go Lib
-        run: ./build.sh
+        run: |
+          ./build.sh
+          # Ensure the libraries have proper permissions
+          chmod 755 ../fastzip4j/src/main/resources/lib/*.so
+          chmod 755 ../fastzip4j/src/main/resources/lib/*.dylib
+          chmod 755 ../fastzip4j/src/main/resources/lib/*.dll
         working-directory: ./fastzip4jlib
+
+      - name: Verify Go Libraries
+        run: |
+          echo "Checking Go libraries in resources directory:"
+          ls -la ./src/main/resources/lib/
+          echo "File types:"
+          file ./src/main/resources/lib/libfastzip4j.*
+          echo "File permissions:"
+          stat ./src/main/resources/lib/libfastzip4j.*
+        working-directory: ./fastzip4j
 
       - name: Setup JDK
         uses: actions/setup-java@v4
@@ -61,7 +76,13 @@ jobs:
         env:
           MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           MAVEN_GPG_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-      
+
+      - name: Verify JAR Contents
+        run: |
+          echo "Checking contents of the built JAR:"
+          jar tf target/fastzip4j-${VERSION}.jar | grep libfastzip4j
+        working-directory: ./fastzip4j
+
       - name: Check Go compile library
         working-directory: ./fastzip4j
         run: |
