--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,17 +20,21 @@ jobs:
         with:
           go-version: '1.24.1'
 
+      - name: Install Cross-Compilation Tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
+          sudo apt-get install -y gcc-multilib g++-multilib
+          sudo apt-get install -y musl-tools
+
       - name: Install Go Packages
         run: go mod tidy
         working-directory: ./fastzip4jlib
 
       - name: Build Go Lib
         run: |
+          chmod +x ./build.sh
           ./build.sh
-          # Ensure the libraries have proper permissions
-          chmod 755 ../fastzip4j/src/main/resources/lib/*.so
-          chmod 755 ../fastzip4j/src/main/resources/lib/*.dylib
-          chmod 755 ../fastzip4j/src/main/resources/lib/*.dll
         working-directory: ./fastzip4jlib
 
       - name: Verify Go Libraries
@@ -41,6 +45,9 @@ jobs:
           file ./src/main/resources/lib/libfastzip4j.*
           echo "File permissions:"
           stat ./src/main/resources/lib/libfastzip4j.*
+          echo "Verifying library formats:"
+          objdump -f ./src/main/resources/lib/libfastzip4j.so | grep -i "file format"
+          x86_64-w64-mingw32-objdump -f ./src/main/resources/lib/libfastzip4j.dll | grep -i "file format"
         working-directory: ./fastzip4j
 
       - name: Setup JDK
