--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
         working-directory: ./fastzip4j
 
       - name: Build artifact
-        run: mvn clean install -Dgpg.skip=true -Dproject.version=SNAPSHOT
+        run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
         working-directory: ./fastzip4j
         
       - name: Verify JAR Contents
