--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,9 +40,11 @@ jobs:
           elif [[ "${{ matrix.target }}" == "windows" ]]; then
             GOOS=windows GOARCH=amd64 CC=x86_64-w64-mingw32-gcc CGO_ENABLED=1 go build -buildmode=c-shared -o ../fastzip4j/src/main/resources/lib/libfastzip4j.dll fastzip4j.go
           elif [[ "${{ matrix.target }}" == "macos" ]]; then
-            docker run --rm -v $(pwd):/work -w /work/fastzip4jlib \
-              crazymax/osxcross:latest \
-              /bin/bash -c "CC=o64-clang GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared -o ../fastzip4j/src/main/resources/lib/libfastzip4j.dylib fastzip4j.go"
+            docker run --rm \
+              -v ${{ github.workspace }}/fastzip4jlib:/go/src/fastzip4jlib \
+              -v ${{ github.workspace }}/fastzip4j/src/main/resources/lib:/out \
+              crazymax/osxcross \
+              /bin/sh -c "cd /go/src/fastzip4jlib && CC=o64-clang CGO_ENABLED=1 GOOS=darwin GOARCH=amd64 go build -buildmode=c-shared -o /out/libfastzip4j.dylib fastzip4j.go"
           fi
         working-directory: ./fastzip4jlib
       
