--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,6 +41,7 @@ jobs:
         if: matrix.target == 'macos'
         run: |
           echo "/tmp/osxcross/target/bin" >> $GITHUB_PATH
+          echo "/tmp/osxcross/target/bin" >> $PATH
           echo "CC=o64-clang" >> $GITHUB_ENV
 
       - name: Install Go Packages
