--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build Linux
 
 on:
   push:
@@ -9,9 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [linux, windows, macos]
 
     steps:
       - name: Checkout code
@@ -25,32 +22,20 @@ jobs:
       - name: Install Cross-Compilation Tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 gcc-mingw-w64
           sudo apt-get install -y gcc-multilib g++-multilib
           sudo apt-get install -y musl-tools
-      
+
       - name: Install Go Packages
         run: go mod tidy
         working-directory: ./fastzip4jlib
 
-      - name: Build Go Lib
+      - name: Build Go Lib for Linux
         run: |
           mkdir -p ../fastzip4j/src/main/resources/lib/
-      
-          if [[ "${{ matrix.target }}" == "linux" ]]; then
-            GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared \
-              -o ../fastzip4j/src/main/resources/lib/libfastzip4j.so fastzip4j.go
-      
-          elif [[ "${{ matrix.target }}" == "windows" ]]; then
-            GOOS=windows GOARCH=amd64 CC=x86_64-w64-mingw32-gcc CGO_ENABLED=1 go build -buildmode=c-shared \
-              -o ../fastzip4j/src/main/resources/lib/libfastzip4j.dll fastzip4j.go
-      
-          elif [[ "${{ matrix.target }}" == "macos" ]]; then
-            GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared \
-              -o ../fastzip4j/src/main/resources/lib/libfastzip4j.dylib fastzip4j.go
-          fi
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared \
+            -o ../fastzip4j/src/main/resources/lib/libfastzip4j.so fastzip4j.go
         working-directory: ./fastzip4jlib
-      
+
       - name: Verify Go Libraries
         run: |
           echo "Checking Go libraries in resources directory:"
@@ -70,7 +55,7 @@ jobs:
       - name: Build artifact
         run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
         working-directory: ./fastzip4j
-        
+
       - name: Verify JAR Contents
         run: |
           echo "Checking contents of the built JAR:"
