--- a/.github/workflows/build-window.yml
+++ b/.github/workflows/build-window.yml
@@ -49,7 +49,7 @@ jobs:
           maven-version: 3.8.2
 
       - name: Build artifact
-        run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
+        run: mvn clean install -D"gpg.skip"=true -Drevision=SNAPSHOT
         working-directory: ./fastzip4j
 
       - name: Verify JAR Contents
