--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -60,3 +60,9 @@ jobs:
         working-directory: ./fastzip4j
         run: |
           ls ./src/main/resources/lib
+  
+      - name: Upload Go Library Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: macos-go-lib
+          path: fastzip4j/src/main/resources/lib/libfastzip4j.dylib
