--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,195 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.1'
+
+      - name: Install Cross-Compilation Tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-multilib g++-multilib
+          sudo apt-get install -y musl-tools
+
+      - name: Install Go Packages
+        run: go mod tidy
+        working-directory: ./fastzip4jlib
+
+      - name: Build Go Lib for Linux
+        run: |
+          mkdir -p ../fastzip4j/src/main/resources/lib/
+          GOOS=linux GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared \
+            -o ../fastzip4j/src/main/resources/lib/libfastzip4j.so fastzip4j.go
+        working-directory: ./fastzip4jlib
+
+      - name: Verify Go Libraries
+        run: |
+          echo "Checking Go libraries in resources directory:"
+          ls -la ./src/main/resources/lib/
+        working-directory: ./fastzip4j
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Setup Maven
+        run: sudo apt-get install -y maven
+        working-directory: ./fastzip4j
+
+      - name: Build artifact
+        run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
+        working-directory: ./fastzip4j
+
+      - name: Verify JAR Contents
+        run: |
+          echo "Checking contents of the built JAR:"
+          jar tf target/fastzip4j-SNAPSHOT.jar | grep libfastzip4j
+        working-directory: ./fastzip4j
+
+      - name: Check Go compile library
+        working-directory: ./fastzip4j
+        run: |
+          ls ./src/main/resources/lib
+
+      - name: Upload Go Library Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-go-lib
+          path: fastzip4j/src/main/resources/lib/libfastzip4j.so
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.1'
+
+      - name: Install Go Packages
+        run: go mod tidy
+        working-directory: ./fastzip4jlib
+
+      - name: Build Go Lib for macOS
+        run: |
+          mkdir -p ../fastzip4j/src/main/resources/lib/
+          GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared \
+            -o ../fastzip4j/src/main/resources/lib/libfastzip4j.dylib fastzip4j.go
+        working-directory: ./fastzip4jlib
+
+      - name: Verify Go Libraries
+        run: |
+          echo "Checking Go libraries in resources directory:"
+          ls -la ./src/main/resources/lib/
+        working-directory: ./fastzip4j
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Setup Maven
+        run: brew install maven
+        working-directory: ./fastzip4j
+
+      - name: Build artifact
+        run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
+        working-directory: ./fastzip4j
+
+      - name: Verify JAR Contents
+        run: |
+          echo "Checking contents of the built JAR:"
+          jar tf target/fastzip4j-SNAPSHOT.jar | grep libfastzip4j
+        working-directory: ./fastzip4j
+
+      - name: Check Go compile library
+        working-directory: ./fastzip4j
+        run: |
+          ls ./src/main/resources/lib
+  
+      - name: Upload Go Library Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-go-lib
+          path: fastzip4j/src/main/resources/lib/libfastzip4j.dylib
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.1'
+
+      - name: Install Go Packages
+        run: go mod tidy
+        working-directory: ./fastzip4jlib
+
+      - name: Build Go Lib for Windows
+        run: |
+          mkdir -p ..\fastzip4j\src\main\resources\lib\
+          $env:GOOS="windows"; $env:GOARCH="amd64"; $env:CGO_ENABLED="1"; go build -buildmode=c-shared -o ..\fastzip4j\src\main\resources\lib\libfastzip4j.dll fastzip4j.go
+        shell: pwsh
+        working-directory: ./fastzip4jlib
+
+      - name: Verify Go Libraries
+        run: |
+          echo "Checking Go libraries in resources directory:"
+          dir ..\fastzip4j\src\main\resources\lib\
+        shell: cmd
+        working-directory: ./fastzip4jlib
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+
+      - name: Build artifact
+        run: mvn clean install -D"gpg.skip"=true -Drevision=SNAPSHOT
+        working-directory: ./fastzip4j
+
+      - name: Verify JAR Contents
+        run: |
+          echo "Checking contents of the built JAR:"
+          jar tf target\fastzip4j-SNAPSHOT.jar | findstr libfastzip4j
+        shell: cmd
+        working-directory: ./fastzip4j
+
+      - name: Check Go compile library
+        run: |
+          dir src\main\resources\lib
+        shell: cmd
+        working-directory: ./fastzip4j
+
+      - name: Upload Go Library Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-go-lib
+          path: fastzip4j/src/main/resources/lib/libfastzip4j.dll
+
   deploy:
     runs-on: ubuntu-latest
     needs: [checkout-code, build-linux, build-windows, build-macos]
