--- a/.github/workflows/build-go-lib.yml
+++ b/.github/workflows/build-go-lib.yml
@@ -48,19 +48,19 @@ jobs:
           elif [ "${{ inputs.target-os }}" == "linux" ]; then
             sudo apt-get install -y gcc-multilib g++-multilib musl-tools
           fi
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Install Go Packages
         run: go mod tidy
         working-directory: ./fastzip4jlib
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Build Go Lib
         run: |
           mkdir -p ${{ inputs.runner == 'windows-latest' && '..\\fastzip4j\\src\\main\\resources\\lib\\' || '../fastzip4j/src/main/resources/lib/' }}
           ${{ inputs.shell-type == 'pwsh' && '$env:GOOS="' || '' }}${{ inputs.target-os }}${{ inputs.shell-type == 'pwsh' && '"; $env:GOARCH="amd64"; $env:CGO_ENABLED="1"; ' || ' GOARCH=amd64 CGO_ENABLED=1 ' }}${{ inputs.cc-compiler && format('CC={0} ', inputs.cc-compiler) }}go build -buildmode=c-shared -o ${{ inputs.runner == 'windows-latest' && '..\\fastzip4j\\src\\main\\resources\\lib\\' || '../fastzip4j/src/main/resources/lib/' }}${{ inputs.output-file }} fastzip4j.go
         working-directory: ./fastzip4jlib
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Verify Go Libraries
         run: |
@@ -71,7 +71,7 @@ jobs:
             ls -la ${{ inputs.runner == 'windows-latest' && '../fastzip4j/src/main/resources/lib/' || '../fastzip4j/src/main/resources/lib/' }}
           fi
         working-directory: ./fastzip4jlib
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Setup JDK
         uses: actions/setup-java@v4
@@ -88,17 +88,17 @@ jobs:
       - name: Setup Maven (Ubuntu)
         if: inputs.runner == 'ubuntu-latest'
         run: sudo apt-get install -y maven
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Setup Maven (macOS)
         if: inputs.runner == 'macos-latest'
         run: brew install maven
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Build artifact
         run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
         working-directory: ./fastzip4j
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Verify JAR Contents
         run: |
@@ -109,7 +109,7 @@ jobs:
             jar tf target/fastzip4j-SNAPSHOT.jar | grep libfastzip4j
           fi
         working-directory: ./fastzip4j
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Check Go compile library
         run: |
@@ -119,7 +119,7 @@ jobs:
             ls -la ${{ inputs.runner == 'windows-latest' && '../fastzip4j/src/main/resources/lib/' || '../fastzip4j/src/main/resources/lib/' }}
           fi
         working-directory: ./fastzip4jlib
-        shell: bash
+        shell: ${{ inputs.shell-type }}
 
       - name: Upload Go Library Artifact
         uses: actions/upload-artifact@v4
