--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -7,11 +7,66 @@ on:
   pull_request:
 
 jobs:
-  build:
-    uses: ./.github/workflows/build-go-lib.yml
-    with:
-      target-os: 'windows'
-      runner: 'windows-latest'
-      output-file: 'libfastzip4j.dll'
-      cc-compiler: ''
-      shell-type: 'pwsh'
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.24.1'
+
+      - name: Install Go Packages
+        run: go mod tidy
+        working-directory: ./fastzip4jlib
+
+      - name: Build Go Lib for Windows
+        run: |
+          mkdir -p ..\fastzip4j\src\main\resources\lib\
+          $env:GOOS="windows"; $env:GOARCH="amd64"; $env:CGO_ENABLED="1"; go build -buildmode=c-shared -o ..\fastzip4j\src\main\resources\lib\libfastzip4j.dll fastzip4j.go
+        shell: pwsh
+        working-directory: ./fastzip4jlib
+
+      - name: Verify Go Libraries
+        run: |
+          echo "Checking Go libraries in resources directory:"
+          dir ..\fastzip4j\src\main\resources\lib\
+        shell: cmd
+        working-directory: ./fastzip4jlib
+
+      - name: Setup JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.8.2
+
+      - name: Build artifact
+        run: mvn clean install -D"gpg.skip"=true -Drevision=SNAPSHOT
+        working-directory: ./fastzip4j
+
+      - name: Verify JAR Contents
+        run: |
+          echo "Checking contents of the built JAR:"
+          jar tf target\fastzip4j-SNAPSHOT.jar | findstr libfastzip4j
+        shell: cmd
+        working-directory: ./fastzip4j
+
+      - name: Check Go compile library
+        run: |
+          dir src\main\resources\lib
+        shell: cmd
+        working-directory: ./fastzip4j
+
+      - name: Upload Go Library Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-go-lib
+          path: fastzip4j/src/main/resources/lib/libfastzip4j.dll
